--- a/hyperparameter_optimization/wandb_sweep_config.yaml
+++ b/hyperparameter_optimization/wandb_sweep_config.yaml
@@ -28,9 +28,9 @@ parameters:
   
   # Training parameters
   learning_rate:
-    distribution: log_uniform
-    min: -5  # 1e-5
-    max: -2  # 1e-2
+    distribution: log_uniform_values
+    min: 0.00001  # 1e-5
+    max: 0.01     # 1e-2
   
   batch_size:
     values: [16, 32, 64, 128]
@@ -39,9 +39,9 @@ parameters:
     values: ['adam', 'sgd', 'rmsprop']
   
   weight_decay:
-    distribution: log_uniform
-    min: -5  # 1e-5
-    max: -3  # 1e-3
+    distribution: log_uniform_values
+    min: 0.00001  # 1e-5
+    max: 0.001    # 1e-3
   
   # Training process parameters
   num_epochs:
